[package]
name = "muda"
version = "0.15.3"
description = "Menu Utilities for Desktop Applications"
edition = "2021"
keywords = ["windowing", "menu"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/amrbashir/muda"
documentation = "https://docs.rs/muda"
categories = ["gui"]

[features]
default = ["libxdo"]
libxdo = ["dep:libxdo"]
common-controls-v6 = []
serde = ["dep:serde", "dpi/serde"]

[dependencies]
crossbeam-channel = "0.5"
keyboard-types = "0.7"
once_cell = { version = "1" }
thiserror = { version = "1" }
serde = { version = "1", optional = true }
dpi = { version = "0.1" }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_Shell",
	"Win32_Globalization",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_SystemServices",
	"Win32_UI_Accessibility",
	"Win32_UI_HiDpi",
	"Win32_System_LibraryLoader",
	"Win32_UI_Controls",
]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }
libxdo = { version = "0.6.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2" }
objc2-foundation = { version = "0.2.2", features = [
	"NSAttributedString",
	"NSData",
	"NSDictionary",
	"NSGeometry",
	"NSString",
	"NSThread",
] }
objc2-app-kit = { version = "0.2.2", features = [
	"NSApplication",
	"NSCell",
	"NSEvent",
	"NSImage",
	"NSMenu",
	"NSMenuItem",
	"NSResponder",
	"NSRunningApplication",
	"NSView",
	"NSWindow",
] }
png = { version = "0.17" }

[dev-dependencies]
winit = { version = "0.29" }
tao = { version = "0.30" }
wry = { version = "0.45" }
image = { version = "0.25" }
